fixed some more scrollbar issues

--- a/client/modules/account/components/onboarding/OnboardingWrapper.styl
+++ b/client/modules/account/components/onboarding/OnboardingWrapper.styl
@@ -49,6 +49,10 @@ fill-color = #2f3f70
     flex-grow 1
     overflow auto
     margin 12px 24px
+    position relative
+    
+    .gm-scrollbar-container
+      position absolute
 
 .onboarding-shadow-container
   width 302.781px
